force-app/main/default/objects/Elaro_Audit_Log__c/Elaro_Audit_Log__c.object-meta.xml
<CustomObject>
    <label>Elaro Audit Log</label>
    <nameField>
        <displayFormat>AL-{00000}</displayFormat>
        <label>Audit Log Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Elaro Audit Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>