force-app/main/default/objects/Elaro_Audit_Log__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Elaro Audit Log Users</relationshipLabel>
    <relationshipName>Elaro_Audit_Log_Users</relationshipName>
    <type>Lookup</type>
</CustomField>